2006-11-27  Francois Dumont  <dums@stlport...>

	* stlport/stl/config/_windows.h: Patch from Michael Fink to check
	inclusion of winbase.h and windows.h.

2006-11-17  Francois Dumont  <dums@stlport...>

	* stlport/stl/config/_macosx.h: Add endianess configuration.

2006-11-16  Francois Dumont  <dums@stlport...>

	* test/unit/resolve_name.cpp: Clean most of MSVC6 workaround, only
	one has been kept to have the test pass.

2006-11-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_cwchar.h: Patch from Michael Fink to fix EVC3
	missing mbstate_t definition.

2006-11-07  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h: Removed _Atomic_swap_struct export
	that should be useless as completely inlined. Moreover it was
	generating a compilation error using MSVC 2005 under Windows
	64 bits.

2006-10-26  Francois Dumont  <dums@stlport...>

	* test/unit/codecvt_test.cpp: Removed try/catch blocks not
	supported by platform missing exception support and moreover
	useless as we know the code called in the try and this code
	do not throw (thanks Michael Fink report).

	* build/Makefiles/nmake/targetdirs.mak, lib/clean.mak, app/clean.mak:
	Complete clobber and distclean rules to really clean all generated
	stuffs.

	* build/Makefiles/nmake/top.mak: Patch from Gary Bartlett to make nmake
	'all' rule the default rule.

2006-10-25  Francois Dumont  <dums@stlport...>

	* src/dll_main.cpp: Fix syntax error '>>' rather than '> >' in
	a _STLP_alloc_proxy explicit instanciation.

	* stlport/stl/_unordered_set.h: Fix template method for the
	associative container extension, use _KT type rather than key_type.

2006-10-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/config: Removed some used macros
	  _STLP_AUTOMATIC_TYPE_TRAITS
	  _STLP_UNINITIALIZABLE_PRIVATE
	  _STLP_STATIC_ARRAY_BUG
	  _STLP_FULL_ADL_IMPLEMENTED

	* test/unit/codecvt_test.cpp: Ignore test when
	_STLP_NO_MEMBER_TEMPLATES defined.

2006-10-20  Petr Ovtchenkov  <complement@users.sourceforge.net>
