@@ -1,3 +1,11 @@
+2007-01-08  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/_deque.c: Patch from Kevin Lin to fix iterator
+	returned by insert at position method.
+
+	* test/unit/deque_test.cpp: Add test case for the deque::insert
+	methods.
+
 2006-11-27  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/config/_windows.h: Patch from Michael Fink to check
